# DobbyLearn

./: .gitignore  Dockerfile  api.py  bot.py  database.py  docker-compose.yml  dockerignore  index.html  models.py  requirements.txt  start-server.sh
ROMA-main/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  cli  docker-compose.yaml  justfile  pyproject.toml  pytest.ini  setup.sh
ROMA-main/assets/: roma_logo_simple_visible.txt  sentient_logo_text_ascii.txt
ROMA-main/config/: README.md
ROMA-main/config/defaults/: config.yaml
ROMA-main/config/examples/: README.md
ROMA-main/config/profiles/: crypto_agent.yaml  general.yaml  test.yaml
ROMA-main/docker/: Dockerfile.mlflow  init-mlflow-db.sql
ROMA-main/docker/e2b/: README.md  e2b.Dockerfile  e2b.toml  requirements.txt  start-up.sh
ROMA-main/docs/: CONFIGURATION.md  DEPLOYMENT.md  E2B_SETUP.md  OBSERVABILITY.md  QUICKSTART.md  TOOLKITS.md
ROMA-main/notebooks/: example.ipynb  prompt_optimization.ipynb
ROMA-main/prompt_optimization/: README.md  __init__.py  component_selectors.py  config.py  dataset_loaders.py  example_async.py  judge.py  optimizer.py  run_optimization.py  solver_setup.py
ROMA-main/prompt_optimization/experiment_cli/: README.md  __init__.py  run_experiment.py
ROMA-main/prompt_optimization/metrics/: __init__.py  metric_with_feedback.py  number_metric.py  search_metric.py
ROMA-main/prompt_optimization/prompts/: __init__.py
ROMA-main/src/roma_dspy/: __init__.py  cli.py  logging_config.py
ROMA-main/tests/: README.md  conftest.py  test_config.py  test_engine.py  test_enhanced_config_validation.py  test_modules.py  test_parallel.py  test_toolkit_injection_bugs.py
ROMA-main/tests/fixtures/: test_fixtures.py
ROMA-main/tests/integration/: test_api_endpoints.py  test_arkham_integration.py  test_cache_checkpoint_synergy.py  test_cli_commands.py  (+17 more)
(+262 files in other folders)
